tests/cases/fail/tuple_destructure_requires_declared_vars.p4
def pair() -> (int,float):
    return (1, 2.5)

def main() -> None:
    (a, b) = pair()
